--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "ember-page-title": "^7.0.0",
     "ember-qunit": "^6.1.1",
     "ember-resolver": "^10.0.0",
+    "ember-resources": "^5.6.2",
     "ember-source": "~4.10.0",
     "ember-template-lint": "^5.3.1",
     "eslint": "^7.32.0",
